--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,6 @@
 // Navigation code here
+nav a{
+    text-decoration: none;
+    color: @header-font-color;
+    font-family:  'Ubuntu', sans-serif;
+}
