--- a/less/home-page.less
+++ b/less/home-page.less
@@ -73,3 +73,14 @@
     }
   }
 }// home
+
+.headimg{
+  margin: 20px;
+  max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.btn{
+  .btnmix(@btn-bg-color,);
+}
