--- a/less/global.less
+++ b/less/global.less
@@ -24,6 +24,12 @@ h2 {
 h3 {
   font-size: 2.8rem;
 }
+h1{
+  font-size: 5.2rem;
+  text-align: center;
+  margin-bottom: 20px;
+  padding-top: 20px;
+}
 
 p {
   font-size: 1.6rem;
@@ -33,6 +39,13 @@ p {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto; 
+   
+}
+
+
+
+a{
+  font-size: 1.6rem;
 }
 
