--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,5 +2,25 @@
 nav a{
     text-decoration: none;
     color: @header-font-color;
-    font-family:  'Ubuntu', sans-serif;
+    font-family: @river-bend;
 }
+
+
+.flexnav{
+    display: flex;
+    justify-content: space-evenly;
+}
+.containernav {
+    max-width: 600px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: @wild-sand;
+    margin-bottom: 10px;
+     
+  }
+  .aroundcontainer{
+    background-color: @wild-sand;
+    width: 100%;
+    margin: 0 auto;
+  }
+  
