--- a/less/home-page.less
+++ b/less/home-page.less
@@ -75,12 +75,30 @@
 }// home
 
 .headimg{
-  margin: 20px;
+ 
   max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 .btn{
-  .btnmix(@btn-bg-color,);
+  .btnmix(@btn-bg-color, @sea-shell);
+  border: 0px solid black;
+  padding: 10px 20px;
+  font-size: 20px;
+  border-radius: 5px;
+  width: max-content;
+}
+
+.btn:hover{
+.btnmix(@sea-shell, @btn-bg-color);
+border: 1px solid black;
+}
+
+@media @phone{
+  body{
+  background-color: blue;
+  }
 }
