--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,7 +15,7 @@ nav a{
     width: 100%;
     margin: 0 auto;
     background-color: @wild-sand;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
      
   }
   .aroundcontainer{
