Added Mixins to complete project

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -78,7 +78,7 @@
  
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  .centerme;
   border-radius: 10px;
   margin-bottom: 20px;
 }
@@ -102,10 +102,10 @@ border: 1px solid black;
     width: 500px;
   }
   .sky{
-    display: none;
+    .hiddenimg;
   }
   .launch{
-    display: none;
+    .hiddenimg;
   }
   .home .walk{
     padding:15px;
@@ -114,12 +114,12 @@ border: 1px solid black;
   }
   .home .walk .walk-text{
     width: 100%;
-    margin: 0 auto;
+    .centerme;
   };
 
   .home .walk .walk-img{
     width: 100%;
-    margin: 0 auto;
+    .centerme;
     margin-bottom: 20px;
   }
   .btn{
