--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,7 @@ nav a{
 .flexnav{
     display: flex;
     justify-content: space-evenly;
+    
 }
 .containernav {
     max-width: 600px;
@@ -22,5 +23,12 @@ nav a{
     background-color: @wild-sand;
     width: 100%;
     margin: 0 auto;
+  }
+
+  .fixednav{
+    position: fixed;
+    width: 100%;
+    margin: 0 auto;
+
   }
   
