--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,11 @@ nav a {
   width: 100%;
   margin: 0 auto;
 }
+.fixednav {
+  position: fixed;
+  width: 100%;
+  margin: 0 auto;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -257,6 +262,7 @@ footer {
   margin: 0 auto;
   border-radius: 10px;
   margin-bottom: 20px;
+  margin-top: 120px;
 }
 .btn {
   background-color: #22283A;
